// Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/superproj/zero.
//

syntax = "proto3";

package gateway.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "apps/v1beta1/generated.proto";

option go_package = "github.com/superproj/zero/pkg/api/gateway/v1";

// Peer lists  hubble peers and notifies of changes.
service Gateway {

  // GetIdempotentToken
  rpc GetIdempotentToken(google.protobuf.Empty) returns (IdempotentResponse) {
    option (google.api.http) = {get: "/v1/idempotents"};
  }

  // CreateMinerSet
  rpc CreateMinerSet(github.com.superproj.zero.pkg.apis.apps.v1beta1.MinerSet) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/minersets",
      body: "*",
    };
  }

  // ListMinerSet
  rpc ListMinerSet(ListMinerSetRequest) returns (ListMinerSetResponse) {
    option (google.api.http) = {get: "/v1/minersets"};
  }

  // GetMinerSet
  rpc GetMinerSet(GetMinerSetRequest) returns (github.com.superproj.zero.pkg.apis.apps.v1beta1.MinerSet) {
    option (google.api.http) = {get: "/v1/minersets/{name}"};
  }

  // UpdateMinerSet
  rpc UpdateMinerSet(github.com.superproj.zero.pkg.apis.apps.v1beta1.MinerSet) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/minersets",
      body: "*",
    };
  }

  // DeleteMinerSet
  rpc DeleteMinerSet(DeleteMinerSetRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/minersets/{name}"};
  }

  // ScaleMinerSet
  rpc ScaleMinerSet(ScaleMinerSetRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/minersets/{name}/scale",
      body: "*",
    };
  }

  // CreateMiner
  rpc CreateMiner(github.com.superproj.zero.pkg.apis.apps.v1beta1.Miner) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/miners",
      body: "*",
    };
  }

  // ListMiner
  rpc ListMiner(ListMinerRequest) returns (ListMinerResponse) {
    option (google.api.http) = {get: "/v1/miners"};
  }

  // GetMiner
  rpc GetMiner(GetMinerRequest) returns (github.com.superproj.zero.pkg.apis.apps.v1beta1.Miner) {
    option (google.api.http) = {get: "/v1/miners/{name}"};
  }

  // UpdateMiner
  rpc UpdateMiner(github.com.superproj.zero.pkg.apis.apps.v1beta1.Miner) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/miners",
      body: "*",
    };
  }

  // DeleteMiner
  rpc DeleteMiner(DeleteMinerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/miners/{name}"};
  }
}

message IdempotentResponse {
  string token = 1;
}

message MinerSet {
  string name = 1;
  int32 replicas = 2;
  string displayName  = 3;
  string deletePolicy = 4;
  MinerTemplate MinerTemplate = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message MinerTemplate {
  string minerType = 1;
  string chainName = 2;
  string dataDir = 3;
}

message CreateMinerSetRequest {
  int32 replicas = 1;
  string displayName  = 2;
  string deletePolicy = 3;
  MinerTemplate MinerTemplate = 4;
}                  

message ListMinerSetRequest {
  int64 limit = 1;         
  int64 offset = 2;
}                  
 
message ListMinerSetResponse {
  int64 totalCount = 1; 
  repeated MinerSet MinerSets= 2;
}

message GetMinerSetRequest {
  string name = 1;
}                  

message UpdateMinerSetRequest {
  string name = 1;
  optional string displayName  = 2;
  optional string deletePolicy = 3;
}

message DeleteMinerSetRequest {
  string name = 1;
}                  

message ScaleMinerSetRequest {
  string name = 1;
  int32 replicas = 2;
}                  

message Miner {
  string name = 1;
  string displayName  = 2;
  string minerType = 3;
  string chainName = 4;
  string dataDir = 5;
  string status = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt= 8;
}

message CreateMinerRequest {
  string displayName  = 1;
  string minerType = 2;
  string chainName = 3;
  string dataDir = 4;
}                  

message ListMinerRequest {
  int64 limit = 1;         
  int64 offset = 2;
}                  
 
message ListMinerResponse {
  int64 totalCount = 1; 
  repeated Miner Miners= 2;
}

message GetMinerRequest {
  string name = 1;
}

message UpdateMinerRequest {
  string name = 1;
  optional string displayName  = 2;
  optional string deletePolicy = 3;
}

message DeleteMinerRequest {
  string name = 1;
}
